# model-compression

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: eval_baseline_conette_clotho.yaml  eval_kd_clotho.yaml  eval_kd_global50_conette_clotho.yaml  eval_kd_global50_conette_clotho_hybrid.yaml  eval_kd_global70_conette_clotho.yaml  example_single.yaml  full_matrix.yaml  kd_decoder_pruned_clotho_pure_kd_all.yaml  kd_decoder_pruned_clotho_pure_kd_dec.yaml  kd_example.yaml  kd_global50_conette_audiocaps_pure_kd_all.yaml  kd_global50_conette_clotho.yaml  kd_global50_conette_clotho_ce_all.yaml  kd_global50_conette_clotho_ce_enc.yaml  kd_global50_conette_clotho_hybrid.yaml  kd_global50_conette_clotho_hybrid_a01.yaml  kd_global50_conette_clotho_hybrid_a02.yaml  kd_global50_conette_clotho_hybrid_a03.yaml  kd_global50_conette_clotho_pure_kd.yaml  kd_global50_conette_clotho_pure_kd_a01.yaml  kd_global50_conette_clotho_pure_kd_all.yaml  kd_global50_conette_clotho_pure_kd_enc.yaml  kd_global70_conette_clotho.yaml  kd_global70_conette_clotho_hybrid_a01.yaml  kd_global70_conette_clotho_hybrid_a02.yaml  kd_global70_conette_clotho_pure_kd.yaml  pruning_decoder_conette_clotho_random.yaml  pruning_decoder_conette_clotho_sum_l2.yaml  pruning_decoder_conette_clotho_wanda.yaml  pruning_global_conette_clotho.yaml  smoke_test.yaml
logs/: predictions_quantized  references_quantized
results/: eval_results_baseline  eval_results_pruned  eval_results_quantized
src/: config.py  dataset_wordcount.py  eval_from_predictions.py  eval_only.py  evaluate.py  example_batch.py  kd.py  (+18 more)
(+1005 files in other folders)
